# cifrex-engine

./: CMakeLists.txt  README.md  build-engine.sh  run-server.sh
cmake/Modules/: FindLibRE2.cmake
console-app/: CMakeLists.txt  Options.cpp  Options.hpp  main.cpp
engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  FileLoader.cpp  FileLoader.hpp  Types.hpp
engine/exs/: Ex.cpp  Ex.hpp  Exs.cpp  Exs.hpp  Fex.cpp  Fex.hpp  Tex.cpp  Tex.hpp  Vex.cpp  Vex.hpp
example-client/: client.py
python/: CMakeLists.txt  pycifrex.cpp
server/: server.py
tests/: example.py
